--- a/CS321_W3D1_BookAPI/CS321_W3D1_BookAPI/CS321_W3D1_BookAPI.csproj
+++ b/CS321_W3D1_BookAPI/CS321_W3D1_BookAPI/CS321_W3D1_BookAPI.csproj
@@ -11,6 +11,13 @@
       <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
 </Project>
